--- a/.github/workflows/mix.yml
+++ b/.github/workflows/mix.yml
@@ -16,9 +16,9 @@ jobs:
       matrix:
         elixir: [1.15, 1.16, 1.17]
         otp: [25, 26]
-      include:
-        elixir: 1.17
-        otp: 27
+        include:
+          - elixir: 1.17
+            otp: 27
 
     steps:
       - uses: actions/checkout@v4
